text-align fixed

--- a/src/app/components/ContentRenderer/ContentRenderer.scss
+++ b/src/app/components/ContentRenderer/ContentRenderer.scss
@@ -10,6 +10,7 @@
   }
   p {
     margin-bottom: 2rem;
+    text-align: justify;
     line-height: 1.7rem;
   }
 }
